<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_CDC9C9" >

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_CDC9C9" />
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_height="wrap_content"
        android:layout_width="240dp"
        android:orientation="vertical"
        android:layout_gravity="start" >
        <LinearLayout
            android:id="@+id/search_drawer"
            android:layout_height="wrap_content"
            android:layout_width="240dp"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:background="#E2E2D4">
            <EditText
                android:id="@+id/place_search"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="Busque locais"
                android:textColor="#FFFFFF">
            </EditText>
            <ImageView
                android:id="@+id/search_place_button"
                android:src="@drawable/ic_action_search"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:onClick="searchPlace">
            </ImageView>
        </LinearLayout>
        <ListView
            android:id="@+id/left_drawer_list"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#363636"
            android:choiceMode="singleChoice"
            android:divider="#FFFFFF"
            android:dividerHeight="2dp"
            android:clickable="false" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>

