<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/map"
    tools:context="com.mathheals.euvou.controller.event_registration.LocalEventActivity"
    android:name="com.google.android.gms.maps.SupportMapFragment" />
